--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <header>
         </header>
         <main>
+            <div class="container">
             <div class="container-column card">
                 <div class="display">
                     <h1 id="displayNumber">0</h1>
@@ -35,6 +36,7 @@
                     <div class="button">0</div>
                     <div class="button equals double">=</div>
                 </div>
+            </div>
             </div>
         </main>
         <footer>
